reacted on code review notes